<resources>
    <string name="app_name">RUN!</string>
    <string name="highscorekey">HIGHSCORE_KEY</string>
    <string name="currentscorekey">CURENT_SCORE_KEY</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="stop_game">Stop game</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_game">Start game</string>
    <string name="currentscore">CurrentScore</string>
    <string name="highscore">Highscore</string>
    <string name="time_left">time left</string>
    <string name="gameover">GameOver</string>
    <string name="instructions">When you start the game, you\'ll see a red checkpoint with a marker looking like the one above. You need to get too this marker before the timer ends, if you get too the point the timer resets.</string>
    <string name="testKey">TestKey</string>
</resources>